--- a/work_manager_server/pubspec.yaml
+++ b/work_manager_server/pubspec.yaml
@@ -1,14 +1,11 @@
 name: work_manager_server
 description: Starting point for a Serverpod server.
-# version: 1.0.0
-# homepage: https://www.example.com
-
 environment:
   sdk: '>=3.3.0 <4.0.0'
-
 dependencies:
   serverpod: 2.3.1
-
+  mailer: ^6.3.0
+  serverpod_auth_server: 2.3.1
 dev_dependencies:
   lints: '>=3.0.0 <6.0.0'
   test: '^1.24.2'
